@@ -1,21 +1,27 @@
 package github.com.rev.musicbrainz.model;
 
+import github.com.rev.mc2.util.miscellaneous.CalendarUtils;
+
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
-import github.com.rev.mc2.util.miscellaneous.CalendarUtils;
 
 /**
  * A DiscTrack consists of tracknum, offset and length of the drack IN the disc.
  * Primary used to rebuild TOC.
- *
  */
 
 public class DiscTrackWs2 {
-     /** track number on disc */
+    /**
+     * track number on disc
+     */
     private int tracknum;
-    /** length in sectors of this track */
+    /**
+     * length in sectors of this track
+     */
     private int length;
-     /** offset position in sectors of this track */
+    /**
+     * offset position in sectors of this track
+     */
     private int offset;
 
     public DiscTrackWs2(Integer tracknum, Integer offset, Integer length) {
@@ -25,24 +31,25 @@ public class DiscTrackWs2 {
     }
 
     public DiscTrackWs2() {
-        
+
     }
 
-     /**
+    /**
      * @param tracknum the tracknum to set
      */
     public void setTracknum(int tracknum) {
-        
+
         int oldTracknum = this.tracknum;
         this.tracknum = tracknum;
         changeSupport.firePropertyChange("tracknum", oldTracknum, tracknum);
 
     }
+
     /**
      * @param offset the offset to set in sectors
      */
     public void setOffset(int offset) {
-        
+
         int oldOffset = this.offset;
         long oldOffsetInMillis = getOffsetInMillis();
         String oldOffsetString = getOffsetString();
@@ -51,68 +58,80 @@ public class DiscTrackWs2 {
         changeSupport.firePropertyChange("offsetInMillis", oldOffsetInMillis, getOffsetInMillis());
         changeSupport.firePropertyChange("offsetString", oldOffsetString, getOffsetString());
     }
+
     /**
      * @param length the length to set
      */
     public void setLength(int length) {
-        
+
         int oldLength = this.length;
         long oldLengthInMillis = getLengthInMillis();
         String oldLengthString = getLengthString();
-        
+
         this.length = length;
-        
+
         changeSupport.firePropertyChange("length", oldLength, length);
         changeSupport.firePropertyChange("lengthInMillis", oldLengthInMillis, getLengthInMillis());
         changeSupport.firePropertyChange("lengthString", oldLengthString, getLengthString());
     }
+
     /**
      * @return the tracknum
      */
     public int getTracknum() {
         return tracknum;
     }
+
     /**
      * @return the offset in sector
      */
     public int getOffset() {
         return offset;
     }
+
     /**
      * @return the length
      */
     public int getLength() {
         return length;
     }
-    
-    public Long getOffsetInMillis(){
-        return new Long(offset)*1000/75;
+
+    public Long getOffsetInMillis() {
+        return Long.valueOf(offset) * 1000 / 75;
     }
-    public Long getLengthInMillis(){
-        return new Long(length)*1000/75;
+
+    public Long getLengthInMillis() {
+        return Long.valueOf(length) * 1000 / 75;
     }
-    public String getOffsetString(){
-        
+
+    public String getOffsetString() {
+
         return getTimeString(getOffsetInMillis());
     }
-     public String getLengthString(){
-        
+
+    public String getLengthString() {
+
         return getTimeString(getLengthInMillis());
     }
-    public int getRealLength(){
-        return getLength()-getOffset();
+
+    public int getRealLength() {
+        return getLength() - getOffset();
     }
-     public Long getRealLengthInMillis(){
-        return new Long(getRealLength())*1000/75;
+
+    public Long getRealLengthInMillis() {
+        return Long.valueOf(getRealLength()) * 1000 / 75;
     }
-    public String getRealLengthString(){
-        
+
+    public String getRealLengthString() {
+
         return getTimeString(getRealLengthInMillis());
     }
-    private String getTimeString(Long millis){
+
+    private String getTimeString(Long millis) {
 
         return CalendarUtils.calcDurationString(millis);
     }
+
     private final PropertyChangeSupport changeSupport = new PropertyChangeSupport(this);
 
     public void addPropertyChangeListener(PropertyChangeListener listener) {
